added controller layer with DTOs for Comment and Discussion classes. Added config package and placed there ModelMapper to map DTOs into normal classes. Made small refactoring of all code. Added empty ControllerTests.