@@ -2,41 +2,33 @@ package com.example.demo;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.doNothing;
-import static org.mockito.Mockito.lenient;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
 
 import java.sql.Timestamp;
 import java.time.LocalDateTime;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.TreeMap;
 
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.isA;
 import static org.mockito.BDDMockito.given;
 
-import org.junit.jupiter.api.AfterEach;
-
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.ArgumentCaptor;
-import org.mockito.Captor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.modelmapper.ModelMapper;
+import org.springframework.beans.factory.annotation.Autowired;
 
 import com.example.demo.model.Comment;
+import com.example.demo.model.CommentDTO;
 import com.example.demo.model.Discussion;
 import com.example.demo.model.Theme;
 import com.example.demo.repository.CommentRepository;
 import com.example.demo.repository.DiscussionRepository;
 import com.example.demo.repository.ThemeRepository;
-import com.example.demo.service.DBEntityService;
 import com.example.demo.service.DBEntityServiceImpl;
 
 @ExtendWith(MockitoExtension.class)
@@ -46,19 +38,11 @@ public class ServiceTests {
 	@Mock private DiscussionRepository discussions;
 	@Mock private CommentRepository comments;
 	
+	@Mock private ModelMapper mapper;
+	
+	@InjectMocks
+	@Autowired
 	private DBEntityServiceImpl service;
-	
-	@BeforeEach
-    void setUp() {
-        service = new DBEntityServiceImpl(themes, discussions, comments);
-    }
-	
-	@AfterEach
-	public void tearDown() {
-		themes.deleteAll();
-		discussions.deleteAll();
-		comments.deleteAll();
-	}
 	
 	@Test
 	public void canGetThemes() {
@@ -133,17 +117,18 @@ public class ServiceTests {
 	public void canAddCommentReply() {
 		//given
 		long id = 1;
-		Comment c1 = new Comment();
-		Comment c2 = new Comment();
+		CommentDTO c1 = new CommentDTO(-1, id, null, "test1", "");
+		Comment c2 = new Comment(null, "test2", "");
+		Comment c3 = new Comment(null, "test1", "");
 		
-		given(comments.findById(id)).willReturn(Optional.of(c1));
-		
+		given(comments.findById(id)).willReturn(Optional.of(c2));
+		given(mapper.map(c1, Comment.class)).willReturn(c3);
 		//when
-		service.addCommentReply(id, c2);
+		service.addCommentReply(c1);
 		
 		//then
-		verify(comments).save(c2);
-		assertThat(c1.getComments()).containsOnly(c2);
+		verify(comments).save(c3);
+		assertThat(c2.getReplies()).containsOnly(c3);
 	}
 	
 	@Test
@@ -205,8 +190,7 @@ public class ServiceTests {
 		Comment c5 = new Comment(Timestamp.valueOf(LocalDateTime.of(2003, 1, 1, 1, 1)), "test5", null); 
 		c5.setId(5L);
 		
-		map1.putAll(Map.of(c1, Collections.emptyList(),
-							c2, List.of(1L),
+		map1.putAll(Map.of( c2, List.of(1L),
 							c3, List.of(1L),
 							c4, List.of(2L),
 							c5, List.of(3L, 2L) 
@@ -214,16 +198,17 @@ public class ServiceTests {
 		
 		long id = 1;
 		Discussion d = new Discussion("test", c1);
-		c1.getComments().add(c2);
-		c1.getComments().add(c3);
-		c2.getComments().addAll(List.of(c4, c5));
-		c3.getComments().add(c5);
+		c1.getReplies().add(c2);
+		c1.getReplies().add(c3);
+		c2.getReplies().addAll(List.of(c4, c5));
+		c3.getReplies().add(c5);
 		
 		given(discussions.findById(id)).willReturn(Optional.of(d));
+		
 		//when
 		Map<Comment, List<Long>> map2 = service.getComments(id);
 		
 		//then
-		assertThat(map2.entrySet()).isEqualTo(map1.entrySet());
+		assertThat(map2).isEqualTo(map1);
 	}
 }
